# visionlog.md

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DECISION.md  LICENSE  README.md  SECURITY.md  biome.json  defaults.json  package.json  pyproject.toml  tsconfig.json
.forge/: manifest.yaml
.github/workflows/: ci.yml  publish.yml
.governor/: config.yaml
.governor/adr/: ADR-006-cli-first-razor-thin-mcp.md
.governor/guardrails/: GUARD-001-no-new-cross-cutting-abstractions-without-clearing.md
.governor/sops/: SOP-002-completion-feedback.md  SOP-003-blocked-task-escalation.md
.research/: research.json
.research/evaluations/: decision-criteria.md
.visionlog/: config.yaml  vision.md
.visionlog/adr/: ADR-001-the-trilogy-must-remain-composable-and-non-prescri.md
.visionlog/sops/: SOP-001-goal-decomposition.md
backlog/: config.yml
backlog/tasks/: task-1 - visionlog-scan-surface-backlog-from-docs.md  task-2 - documents-layer-register-project-knowledge.md  task-3 - backlog-gap-tool-goals-without-tasks.md
candidates/: defaults-check-on-init.md  sop-list-per-task.md  source-research-id.md  visionlog-boot-full.md
evaluations/: scoring-matrix.md
findings/: 0004-blocked_reason-field-adds-10-tokens-only-when-a-task-is-actually-blocked.md  0005-defaults_check-is-a-one-time-or-on-demand-cost-not-per-session.md  0006-initiative-layer-imposes-cross-session-query-overhead-with-no-bounded-cost.md
governor_md/: __init__.py  constants.py  core.py  defaults.py  filesystem.py  mcp_server.py  migrate_from_visionlog.py  parser.py  serializer.py  server.py  types.py
governor_md/_logic/: __init__.py  _session.py  decision.py  goal.py  guardrail.py  project.py  session.py  sop.py  vision.py
governor_md/cli/: __init__.py  _app.py  decision.py  goal.py  guardrail.py  mcp.py  project.py  session.py  sop.py  vision.py
refactor/: capture-edge-cases.ts  capture-fixtures.ts  verify-fixtures.py
src/: cli.ts
src/constants/: index.ts
src/core/: visionlog.ts
src/defaults/: bundled.ts
src/file-system/: operations.ts
src/markdown/: parser.ts  serializer.ts
src/mcp/: registry.ts  server.ts
src/mcp/tools/: goals.ts  (+5 more)
src/test/: concurrency.test.ts  config.test.ts  dag.test.ts  find-root.test.ts  helpers.ts  next-id.test.ts  registry.test.ts  roundtrip.test.ts  update.test.ts
src/types/: index.ts
visionlog/: config.yaml  vision.md
visionlog/adr/: ADR-001-guardrails-are-the-kernel-immutable-conscience-not.md  (+5 more)
visionlog_md/: __init__.py  constants.py  core.py  defaults.py  filesystem.py  parser.py  serializer.py  server.py  types.py
(+86 files in other folders)
