[project]
name = "governor-md"
version = "0.3.0"
description = "The static St. Peter — vision, goals, guardrails, SOPs, ADRs for AI agent governance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Daniel Shanklin", email = "daniel@eidosagi.com" },
]
keywords = ["mcp", "vision", "governance", "guardrails", "agent-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
governor = "governor_md.server:main"
governor-migrate = "governor_md.migrate_from_visionlog:main"

[project.entry-points."mcp"]
governor = "governor_md.server:mcp"

[project.urls]
Homepage = "https://github.com/eidos-agi/governor.md"
Repository = "https://github.com/eidos-agi/governor.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["governor_md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
